fixed some js + scrollbar
Зробив, щоб інпути і кнопки не реагували на дії користувача, коли він не обрав будь-який варіант для роботи коду.
Також змінив scrollbar.

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -4,7 +4,7 @@ body {
   font-family: Montserrat Alternates;
   background-color: var(--bg-color);
   color: var(--text-color);
-  transition: all 250ms ease-in-out;;
+  transition: all 250ms ease-in-out;
   cursor: url('../../images/cursor.png'), default;
 }
 
@@ -59,4 +59,13 @@ main {
 }
 button, a {
   cursor: url('../../images/pointer.png'), pointer;
+}
+
+::-webkit-scrollbar {
+  background-color: var(--accent-color);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background-color: #222121;
 }
